z-index fix with links

--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -4,7 +4,6 @@
 	justify-content: center;
 	margin: 60px 0 40px 0;
 	text-align: center;
-	z-index: 90;
 
 	h2 {
 		font-size: 78px;
