--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -5,7 +5,6 @@
 
 .end {
 	position: relative;
-	z-index: -1;
 	min-height: 50vh;
 	margin-top: -40px;
 	padding-top: 90px;
